--- a/Bypass.ipynb
+++ b/Bypass.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyN/myTGRlz6TAiOv4n6N1xn",
+      "authorship_tag": "ABX9TyPMqg/9qZrGzh+/sZr5R353",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -539,6 +539,164 @@
       ],
       "metadata": {
         "id": "KHH3UBw-KMvo"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "I provided code for a single neural network with a bypass connection. Let's expand this to include both network architectures shown in the image.\n",
+        "\n",
+        "Below is the Python code for both bypassed networks:\n",
+        "\n",
+        "### Python Code\n",
+        "\n",
+        "```python\n",
+        "import numpy as np\n",
+        "\n",
+        "# Activation functions\n",
+        "def relu(x):\n",
+        "    return np.maximum(0, x)\n",
+        "\n",
+        "def linear(x):\n",
+        "    return x\n",
+        "\n",
+        "# Derivative of activation functions\n",
+        "def relu_derivative(x):\n",
+        "    return np.where(x > 0, 1, 0)\n",
+        "\n",
+        "# Mean Squared Error loss function\n",
+        "def mse_loss(y_true, y_pred):\n",
+        "    return np.mean((y_true - y_pred) ** 2)\n",
+        "\n",
+        "# Derivative of Mean Squared Error loss function\n",
+        "def mse_derivative(y_true, y_pred):\n",
+        "    return 2 * (y_pred - y_true) / y_true.size\n",
+        "\n",
+        "# Neural Network class for the top architecture\n",
+        "class BypassNetworkTop:\n",
+        "    def __init__(self, input_size, hidden_size, learning_rate=0.01):\n",
+        "        self.W1 = np.random.randn(hidden_size, input_size)\n",
+        "        self.W2 = np.random.randn(1, hidden_size)\n",
+        "        self.W_bypass = np.random.randn(1, input_size)\n",
+        "        self.learning_rate = learning_rate\n",
+        "\n",
+        "    def forward(self, p):\n",
+        "        self.p = p\n",
+        "        self.a1 = np.dot(self.W1, self.p)\n",
+        "        self.h1 = relu(self.a1)\n",
+        "        self.h2 = np.dot(self.W2, self.h1) + np.dot(self.W_bypass, self.p)\n",
+        "        return linear(self.h2)\n",
+        "\n",
+        "    def backward(self, y_true, y_pred):\n",
+        "        loss_grad = mse_derivative(y_true, y_pred)\n",
+        "        dW2 = loss_grad * self.h1\n",
+        "        dW_bypass = loss_grad * self.p\n",
+        "        dW1 = np.dot((loss_grad * self.W2 * relu_derivative(self.a1)).reshape(-1, 1), self.p.reshape(1, -1))\n",
+        "        \n",
+        "        self.W2 -= self.learning_rate * dW2\n",
+        "        self.W_bypass -= self.learning_rate * dW_bypass\n",
+        "        self.W1 -= self.learning_rate * dW1\n",
+        "\n",
+        "    def train(self, inputs, labels, epochs):\n",
+        "        for epoch in range(epochs):\n",
+        "            total_loss = 0\n",
+        "            for p, y_true in zip(inputs, labels):\n",
+        "                y_pred = self.forward(p)\n",
+        "                loss = mse_loss(y_true, y_pred)\n",
+        "                total_loss += loss\n",
+        "                self.backward(y_true, y_pred)\n",
+        "            if epoch % 100 == 0:\n",
+        "                print(f'Epoch {epoch}, Loss: {total_loss / len(inputs)}')\n",
+        "\n",
+        "# Neural Network class for the bottom architecture\n",
+        "class BypassNetworkBottom:\n",
+        "    def __init__(self, input_size, hidden_size, learning_rate=0.01):\n",
+        "        self.W1 = np.random.randn(hidden_size, input_size)\n",
+        "        self.W2 = np.random.randn(1, hidden_size)\n",
+        "        self.W_bypass = np.random.randn(1, input_size)\n",
+        "        self.learning_rate = learning_rate\n",
+        "\n",
+        "    def forward(self, p):\n",
+        "        self.p = p\n",
+        "        self.a1 = np.dot(self.W1, self.p)\n",
+        "        self.h1 = relu(self.a1)\n",
+        "        self.h2 = np.dot(self.W2, self.h1) + np.dot(self.W_bypass, self.p)\n",
+        "        return linear(self.h2)\n",
+        "\n",
+        "    def backward(self, y_true, y_pred):\n",
+        "        loss_grad = mse_derivative(y_true, y_pred)\n",
+        "        dW2 = loss_grad * self.h1\n",
+        "        dW_bypass = loss_grad * self.p\n",
+        "        dW1 = np.dot((loss_grad * self.W2 * relu_derivative(self.a1)).reshape(-1, 1), self.p.reshape(1, -1))\n",
+        "        \n",
+        "        self.W2 -= self.learning_rate * dW2\n",
+        "        self.W_bypass -= self.learning_rate * dW_bypass\n",
+        "        self.W1 -= self.learning_rate * dW1\n",
+        "\n",
+        "    def train(self, inputs, labels, epochs):\n",
+        "        for epoch in range(epochs):\n",
+        "            total_loss = 0\n",
+        "            for p, y_true in zip(inputs, labels):\n",
+        "                y_pred = self.forward(p)\n",
+        "                loss = mse_loss(y_true, y_pred)\n",
+        "                total_loss += loss\n",
+        "                self.backward(y_true, y_pred)\n",
+        "            if epoch % 100 == 0:\n",
+        "                print(f'Epoch {epoch}, Loss: {total_loss / len(inputs)}')\n",
+        "\n",
+        "# Training data\n",
+        "inputs = [np.array([1, 2]), np.array([2, -3]), np.array([0, 2]), np.array([-1, -4])]\n",
+        "labels = [2.2, 7.5, 9.2, 8.1]\n",
+        "\n",
+        "# Initialize and train the top architecture network\n",
+        "print(\"Training Top Architecture Network\")\n",
+        "network_top = BypassNetworkTop(input_size=2, hidden_size=3, learning_rate=0.01)\n",
+        "network_top.train(inputs, labels, epochs=1000)\n",
+        "\n",
+        "# Print final weights of the top architecture\n",
+        "print(\"Top Architecture Weights\")\n",
+        "print(\"W1:\", network_top.W1)\n",
+        "print(\"W2:\", network_top.W2)\n",
+        "print(\"W_bypass:\", network_top.W_bypass)\n",
+        "\n",
+        "# Initialize and train the bottom architecture network\n",
+        "print(\"\\nTraining Bottom Architecture Network\")\n",
+        "network_bottom = BypassNetworkBottom(input_size=2, hidden_size=3, learning_rate=0.01)\n",
+        "network_bottom.train(inputs, labels, epochs=1000)\n",
+        "\n",
+        "# Print final weights of the bottom architecture\n",
+        "print(\"Bottom Architecture Weights\")\n",
+        "print(\"W1:\", network_bottom.W1)\n",
+        "print(\"W2:\", network_bottom.W2)\n",
+        "print(\"W_bypass:\", network_bottom.W_bypass)\n",
+        "```\n",
+        "\n",
+        "### Explanation\n",
+        "1. **Activation Functions and Their Derivatives:**\n",
+        "   - `relu` and `relu_derivative` are used for the hidden layer.\n",
+        "   - `linear` is used for the output layer.\n",
+        "\n",
+        "2. **Loss Functions:**\n",
+        "   - `mse_loss` calculates the Mean Squared Error.\n",
+        "   - `mse_derivative` computes the gradient of the MSE loss.\n",
+        "\n",
+        "3. **BypassNetworkTop and BypassNetworkBottom Classes:**\n",
+        "   - Both classes initialize the network with random weights.\n",
+        "   - The `forward` method computes the network's output.\n",
+        "   - The `backward` method computes the gradients and updates the weights using gradient descent.\n",
+        "   - The `train` method trains the network over a specified number of epochs.\n",
+        "\n",
+        "4. **Training Data:**\n",
+        "   - Inputs and corresponding labels are provided.\n",
+        "   - Both networks are trained for 1000 epochs with a learning rate of 0.01.\n",
+        "\n",
+        "5. **Final Weights:**\n",
+        "   - The final weights of both networks are printed after training.\n",
+        "\n",
+        "This code defines two separate classes for the two different bypassed network architectures shown in the image and trains them using the same dataset."
+      ],
+      "metadata": {
+        "id": "KzKl3oIOK-7i"
       }
     }
   ]
