--- a/problem_formulation.ipynb
+++ b/problem_formulation.ipynb
@@ -4,7 +4,10 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMmwK4rwc7HrY/8lLd4UlKg",
+      "collapsed_sections": [
+        "guBit8Muam1L"
+      ],
+      "authorship_tag": "ABX9TyPKArlpl7tHTVwlX9hepNcj",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -25,6 +28,15 @@
       "source": [
         "<a href=\"https://colab.research.google.com/github/alirezakavianifar/gitTutorial/blob/developer/problem_formulation.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Sets and Parameters"
+      ],
+      "metadata": {
+        "id": "guBit8Muam1L"
+      }
     },
     {
       "cell_type": "markdown",
@@ -143,98 +155,153 @@
     {
       "cell_type": "markdown",
       "source": [
-        "\n",
-        "\n",
-        "---\n",
-        "\n",
-        "### 1.1.3. Decision Variables\n",
-        "\n",
-        "\\[\n",
-        "X_{ij}^{tr} =\n",
-        "\\begin{cases}\n",
-        "1 & \\text{if truck } tr \\in TR \\text{ moves between nodes } i \\in N_0 \\text{ and } j \\in N^- \\text{, where } i \\neq j \\\\\n",
-        "0 & \\text{otherwise}\n",
-        "\\end{cases}\n",
-        "\\]\n",
-        "\n",
-        "\\[\n",
-        "Y_{ijB}^{tr} =\n",
-        "\\begin{cases}\n",
-        "1 & \\text{if UAV of truck } tr \\in TR \\text{ departs from node } i \\in N_0 \\text{, flies to } j \\in C \\text{, and returns to the end depot or truck at node } B \\in N^+ \\text{, } \\{0, j, B\\} \\in TP \\\\\n",
-        "0 & \\text{otherwise}\n",
-        "\\end{cases}\n",
-        "\\]\n",
-        "\n",
-        "\\[\n",
-        "RP_{ijB}^k =\n",
-        "\\begin{cases}\n",
-        "1 & \\text{if UAV } k \\in K \\text{ of truck departs from node } i \\in N_0 \\text{, flies to } j \\in C \\text{, and returns to the end depot or truck at node } B \\in N^+ \\text{, } \\{0, j, B\\} \\in TP \\\\\n",
-        "0 & \\text{otherwise}\n",
-        "\\end{cases}\n",
-        "\\]\n",
-        "\n",
-        "\\[\n",
-        "z_{ij} =\n",
-        "\\begin{cases}\n",
-        "1 & \\text{if delivery location } i \\text{ is served immediately before } j \\text{ by a RPA} \\\\\n",
-        "0 & \\text{otherwise}\n",
-        "\\end{cases}\n",
-        "\\]\n",
-        "\n",
-        "\\[\n",
-        "y_i =\n",
-        "\\begin{cases}\n",
-        "1 & \\text{if RPA battery is replaced after returning from delivery location } i \\\\\n",
-        "0 & \\text{otherwise}\n",
-        "\\end{cases}\n",
-        "\\]\n",
-        "\n",
-        "\\[\n",
-        "x_{ki} =\n",
-        "\\begin{cases}\n",
-        "1 & \\text{if RPA type } k \\text{ is assigned to deliver a package to location } i \\\\\n",
-        "0 & \\text{otherwise}\n",
-        "\\end{cases}\n",
-        "\\]\n",
-        "\n",
-        "\\[\n",
-        "x_{Dji} =\n",
-        "\\begin{cases}\n",
-        "1 & \\text{Binary variable indicating whether a route exists from the depot to } i \\\\\n",
-        "0 & \\text{otherwise}\n",
-        "\\end{cases}\n",
-        "\\]\n",
-        "\n",
-        "\\[\n",
-        "x_{iDj} =\n",
-        "\\begin{cases}\n",
-        "1 & \\text{Binary variable indicating whether a route exists from } j \\text{ to the depot} \\\\\n",
-        "0 & \\text{otherwise}\n",
-        "\\end{cases}\n",
-        "\\]\n",
-        "\n",
-        "\\[\n",
-        "Y_{ij} =\n",
-        "\\begin{cases}\n",
-        "1 & \\text{Binary variable indicating whether a RPA travels from point } i \\text{ to a charging point } j \\\\\n",
-        "0 & \\text{otherwise}\n",
-        "\\end{cases}\n",
-        "\\]\n",
-        "\n",
-        "---\n"
+        "## Decision variables"
       ],
       "metadata": {
-        "id": "5JKmOh-lhHWi"
+        "id": "7GGllbvgaaHk"
       }
     },
     {
       "cell_type": "markdown",
       "source": [
-        "Certainly! Here is the text extracted from the image:\n",
+        "\n",
+        "\n",
+        "#### Definitions:\n",
+        "\n",
+        "1. **Truck Movement Between Nodes:**\n",
+        "   \n",
+        "   $$ X_{ij}^{tr} =\n",
+        "   \\begin{cases}\n",
+        "   1 & \\text{if truck } tr \\in TR \\text{ moves between nodes } i \\in N_0 \\text{ and } j \\in N^- \\text{, where } i \\neq j \\\\\n",
+        "   0 & \\text{otherwise}\n",
+        "   \\end{cases} $$\n",
+        "  \n",
+        "\n",
+        "2. **UAV Movement from Truck to Node and Back:**\n",
+        "   \n",
+        "   $$ Y_{ijB}^{tr} =\n",
+        "   \\begin{cases}\n",
+        "   1 & \\text{if UAV of truck } tr \\in TR \\text{ departs from node } i \\in N_0 \\text{, flies to } j \\in C \\text{, and returns to the end depot or truck at node } B \\in N^+ \\text{, } \\{0, j, B\\} \\in TP \\\\\n",
+        "   0 & \\text{otherwise}\n",
+        "   \\end{cases} $$\n",
+        "   \n",
+        "\n",
+        "3. **UAV Specific Route:**\n",
+        "   \n",
+        "   $$ RP_{ijB}^k =\n",
+        "   \\begin{cases}\n",
+        "   1 & \\text{if UAV } k \\in K \\text{ of truck departs from node } i \\in N_0 \\text{, flies to } j \\in C \\text{, and returns to the end depot or truck at node } B \\in N^+ \\text{, } \\{0, j, B\\} \\in TP \\\\\n",
+        "   0 & \\text{otherwise}\n",
+        "   \\end{cases} $$\n",
+        "   \n",
+        "\n",
+        "4. **RPA Delivery Sequence:**\n",
+        "   \n",
+        "   $$ z_{ij} =\n",
+        "   \\begin{cases}\n",
+        "   1 & \\text{if delivery location } i \\text{ is served immediately before } j \\text{ by a RPA} \\\\\n",
+        "   0 & \\text{otherwise}\n",
+        "   \\end{cases} $$\n",
+        "  \n",
+        "\n",
+        "5. **RPA Battery Replacement:**\n",
+        "   \n",
+        "   $$ y_i =\n",
+        "   \\begin{cases}\n",
+        "   1 & \\text{if RPA battery is replaced after returning from delivery location } i \\\\\n",
+        "   0 & \\text{otherwise}\n",
+        "   \\end{cases} $$\n",
+        "   \n",
+        "\n",
+        "6. **RPA Assignment to Delivery Location:**\n",
+        "   \n",
+        "   $$ x_{ki} =\n",
+        "   \\begin{cases}\n",
+        "   1 & \\text{if RPA type } k \\text{ is assigned to deliver a package to location } i \\\\\n",
+        "   0 & \\text{otherwise}\n",
+        "   \\end{cases} $$\n",
+        "   \n",
+        "\n",
+        "7. **Route from Depot to Node:**\n",
+        "   \n",
+        "   $$ x_{Dji} =\n",
+        "   \\begin{cases}\n",
+        "   1 & \\text{Binary variable indicating whether a route exists from the depot to } i \\\\\n",
+        "   0 & \\text{otherwise}\n",
+        "   \\end{cases} $$\n",
+        "   \n",
+        "\n",
+        "8. **Route from Node to Depot:**\n",
+        "   \n",
+        "   $$ x_{iDj} =\n",
+        "   \\begin{cases}\n",
+        "   1 & \\text{Binary variable indicating whether a route exists from } j \\text{ to the depot} \\\\\n",
+        "   0 & \\text{otherwise}\n",
+        "   \\end{cases} $$\n",
+        "   \n",
+        "\n",
+        "9. **RPA Travel to Charging Point:**\n",
+        "   \n",
+        "   $$ Y_{ij} =\n",
+        "   \\begin{cases}\n",
+        "   1 & \\text{Binary variable indicating whether a RPA travels from point } i \\text{ to a charging point } j \\\\\n",
+        "   0 & \\text{otherwise}\n",
+        "   \\end{cases} $$\n",
+        "   \n",
+        "\n",
+        "#### Example Constraints:\n",
+        "\n",
+        "1. **Each truck can move to at most one node at a time:**\n",
+        "   \n",
+        "   $$ \\sum_{j \\in N^-} X_{ij}^{tr} \\leq 1, \\quad \\forall i \\in N_0, tr \\in TR $$\n",
+        "  \n",
+        "\n",
+        "2. **Each UAV must return to the truck or end depot:**\n",
+        "   \n",
+        "   $$ Y_{ijB}^{tr} = 0, \\quad \\forall i \\in N_0, j \\in C, B \\in N^+, \\{0, j, B\\} \\notin TP $$\n",
+        "   \n",
+        "\n",
+        "3. **UAV routes are consistent:**\n",
+        "  \n",
+        "   $$ \\sum_{j \\in C} RP_{ijB}^k = \\sum_{B \\in N^+} Y_{ijB}^{tr}, \\quad \\forall k \\in K, i \\in N_0, tr \\in TR $$\n",
+        "   \n",
+        "\n",
+        "4. **Battery replacement after certain deliveries:**\n",
+        "   \n",
+        "   $$ y_i = 1 \\implies \\text{Battery replacement after delivery at } i, \\quad \\forall i \\in N $$\n",
+        "   \n",
+        "\n",
+        "5. **RPA assignment constraint:**\n",
+        "   \n",
+        "   $$ \\sum_{k \\in K} x_{ki} = 1, \\quad \\forall i \\in C $$\n",
+        "   \n",
+        "\n",
+        "6. **Depot route constraints:**\n",
+        "   \n",
+        "   $$ \\sum_{i \\in C} x_{Dji} \\leq 1, \\quad \\forall j \\in N_0 $$\n",
+        "   \n",
+        "   \n",
+        "   $$ \\sum_{j \\in N_0} x_{iDj} \\leq 1, \\quad \\forall i \\in C $$\n",
+        "   \n",
+        "\n",
+        "7. **Charging point travel constraint:**\n",
+        "   \n",
+        "   $$ \\sum_{j \\in C} Y_{ij} \\leq 1, \\quad \\forall i \\in N $$\n",
+        "  \n",
+        "\n",
+        "You can copy and paste these LaTeX expressions into your Colab notebook markdown cells to display them properly."
+      ],
+      "metadata": {
+        "id": "qvBoj5VWYgXD"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "\n",
         "---\n",
         "\n",
-        "### 1.1.4. Mathematical Model\n",
+        "## 1.1.4. Mathematical Model\n",
         "\n",
         "Based on the previous definitions, the model and variables can be explained as follows: These parameters include point-specific values, service times, RPA and Truck capacities, operational time windows, cost factors, battery-related parameters, and penalties associated with various operational conditions.\n",
         "\n",
